--- a/legal.html
+++ b/legal.html
@@ -45,8 +45,43 @@
 </head>
 
 <body>
-  
-<header>
+
+<header class="container mx-auto">
+  <nav>
+    <div class="navbar bg-base-100 ">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </div>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-poppins font-medium">
+            <li><a>Home</a></li>
+            <li><a>Services <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Cases <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Blog <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Contact Us <i class="fa-solid fa-angle-right "></i></a></li>
+          </ul>
+        </div>
+        <div class="flex items-center ">
+          <img class="w-8 lg:w-12" src="./images/logo3.png" alt="">
+        <p class="text-xl lg:text-3xl ml-2 font-bold text-garamound">Justice</p>
+        </div>
+        
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1 text-poppins font-medium">
+          <li><a>Home</a></li>
+            <li><a>Services <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Cases <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Blog <i class="fa-solid fa-angle-right "></i></a></li>
+            <li><a>Contact Us <i class="fa-solid fa-angle-right "></i></a></li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <a class="btn bg-[#B68C5A;] text-white rounded-lg">Free Consultation</a>
+      </div>
+    </div>
+  </nav>
 
 </header>
 
