--- a/legal.html
+++ b/legal.html
@@ -86,8 +86,24 @@
 </header>
 
 
-<main>
+<main class="container mx-auto">
+<!-- Banner Section  -->
+<section class="my-24">
+<div class="flex justify-center">
+  <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex justify-center items-center">
+<div class="text-white space-y-4 ">
+  <h1 class="text-4xl font-extrabold font-garamound text-center">We Provide Effective <br> Legal Solutions</h1>
+  <p class="text-center font-normal lg:px-28">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  <div class="flex justify-center items-center space-x-4">
+    <input class="input lg:w-1/3" type="text" placeholder="Search your services">
+    <button class="btn border-none lg:w-1/4 bg-[#B68C5A] text-white">Search</button>
 
+</div>    
+
+  </div>
+  </div>
+</div>
+</section>
 </main>
 
 
