--- a/legal.html
+++ b/legal.html
@@ -37,7 +37,7 @@
     .poppins{
       font-family: 'Poppins', sans-serif;
     }
-    .garamound {
+    .garamond {
       font-family: 'EB Garamond', serif;
     }
   </style>
@@ -64,12 +64,12 @@
         </div>
         <div class="flex items-center ">
           <img class="w-8 lg:w-12" src="./images/logo3.png" alt="">
-        <p class="text-xl lg:text-3xl ml-2 font-bold text-garamound">Justice</p>
+        <p class="text-xl lg:text-3xl ml-2 font-bold garamond">Justice</p>
         </div>
         
       </div>
       <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal px-1 text-poppins font-medium">
+        <ul class="menu menu-horizontal px-1 poppins font-medium">
           <li><a>Home</a></li>
             <li><a>Services <i class="fa-solid fa-angle-right "></i></a></li>
             <li><a>Cases <i class="fa-solid fa-angle-right "></i></a></li>
@@ -78,7 +78,7 @@
         </ul>
       </div>
       <div class="navbar-end">
-        <a class="btn bg-[#B68C5A;] text-white rounded-lg">Free Consultation</a>
+        <a class="btn bg-[#B68C5A;] font-semibold poppins text-white rounded-lg">Free Consultation</a>
       </div>
     </div>
   </nav>
@@ -92,18 +92,89 @@
 <div class="flex justify-center">
   <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex justify-center items-center">
 <div class="text-white space-y-4 ">
-  <h1 class="text-4xl font-extrabold font-garamound text-center">We Provide Effective <br> Legal Solutions</h1>
-  <p class="text-center font-normal lg:px-28">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  <h1 class="text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
+  <p class="text-center font-normal lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   <div class="flex justify-center items-center space-x-4">
-    <input class="input lg:w-1/3" type="text" placeholder="Search your services">
-    <button class="btn border-none lg:w-1/4 bg-[#B68C5A] text-white">Search</button>
-
+    <input class="input lg:w-1/3 poppins" type="text" placeholder="Search your services">
+    <button class="btn border-none lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
-
   </div>
   </div>
 </div>
 </section>
+
+<!-- Card Container section  -->
+<section>
+  <div class="text-center w-1/2 mx-auto space-y-3">
+    <h3 class="garamond text-2xl font-extrabold text-[#414040]">The Legal Practice Area</h3>
+    <p class="font-normal poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  </div>
+<!-- Card sub section  -->
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-10">
+    <!-- first card  -->
+    <div class="p-5 flex flex-col justify-center items-center border-r border-b ">
+    <div>
+      <img src="./images/business.png" alt="">
+    </div>
+    <h5 class="text-xl garamond font-extrabold text-[#414040] mt-8 mb-6">Business Law</h5>
+    <p class="text-[#707070] poppins font-normal mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    <img src="./images/Frame.png" alt="">
+    </div>
+
+    <!-- second card  -->
+    <div class="p-5 flex flex-col justify-center items-center border-b border-r bg-[linear-gradient(180deg,rgba(243,243,243,0),rgba(243,243,243,1.00))]">
+      <div>
+        <img src="./images/criminal.png" alt="">
+      </div>
+      <h5 class="text-xl garamond font-extrabold text-[#414040] mt-8 mb-6">Criminal Law</h5>
+      <p class="text-[#707070] poppins font-normal mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <img src="./images/Frame.png" alt="">
+      </div>
+
+    <!-- Third Card  -->
+    <div class="p-5 flex flex-col justify-center items-center border-b">
+      <div>
+        <img src="./images/child.png" alt="">
+      </div>
+      <h5 class="text-xl font-extrabold garamond text-[#414040] mt-8 mb-6">Child Support</h5>
+      <p class="text-[#707070] font-normal poppins mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <img src="./images/Frame.png" alt="">
+      </div>
+
+    <!-- Fourth card  -->
+    <div class="p-5 flex flex-col justify-center items-center border-r">
+      <div>
+        <img src="./images/education.png" alt="">
+      </div>
+      <h5 class="text-xl font-extrabold garamond text-[#414040] mt-8 mb-6">Education Law</h5>
+      <p class="text-[#707070] font-normal poppins mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <img src="./images/Frame.png" alt="">
+      </div>
+
+    <!-- Fifth Card  -->
+    <div class="p-5 flex flex-col justify-center items-center border-r">
+      <div>
+        <img src="./images/divorce.png" alt="">
+      </div>
+      <h5 class="text-xl font-extrabold garamond text-[#414040] mt-8 mb-6">Divorce Law</h5>
+      <p class="text-[#707070] poppins font-normal mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <img src="./images/Frame.png" alt="">
+      </div>
+
+    <!-- Sixth Card  -->
+    <div class="p-5 flex flex-col justify-center items-center">
+      <div>
+        <img src="./images/tax.png" alt="">
+      </div>
+      <h5 class="text-xl font-extrabold garamond text-[#414040] mt-8 mb-6">Tax Law</h5>
+      <p class="text-[#707070] font-normal mb-8 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <img src="./images/Frame.png" alt="">
+      </div>
+  </div>
+
+
+</section>
+
 </main>
 
 
