Client review section done

--- a/legal.html
+++ b/legal.html
@@ -175,6 +175,81 @@
 
 </section>
 
+<!-- Client Review section  -->
+<section class="my-24">
+  <div class="text-center  mx-auto ">
+    <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">What Our Client Say</h3>
+    <p class="font-normal poppins text-[#707070] mt-6 mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  </div>
+
+<!-- Slider sub section  -->
+<div>
+
+
+
+  <div class="carousel w-full">
+    <div id="slide1" class="carousel-item relative w-full">
+      <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex flex-col justify-center items-center">
+        <img src="./images/Ellipse-1.png" alt="">
+        <h5 class="text-white text-2xl garamond mt-6 mb-2 font-extrabold">Awlad Hossain</h5>
+        <p class="text-white font-normal poppins mb-8">UIX Designer</p>
+        <p class="text-white font-normal poppins w-2/3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old..</p>
+      </div>
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide4" class="btn btn-circle">❮</a> 
+        <a href="#slide2" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+    <div id="slide2" class="carousel-item relative w-full">
+      <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/slider-1.jpg)] h-[80vh] bg-no-repeat bg-center bg-cover flex flex-col justify-center items-center">
+        <img src="./images/Ellipse-1.png" alt="">
+        <h5 class="text-white text-2xl garamond mt-6 mb-2 font-extrabold">Awlad Hossain</h5>
+        <p class="text-white font-normal poppins mb-8">UIX Designer</p>
+        <p class="text-white font-normal poppins w-2/3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old..</p>
+      </div>
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide1" class="btn btn-circle">❮</a> 
+        <a href="#slide3" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+    <div id="slide3" class="carousel-item relative w-full">
+      <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/slider-2.jpg)] h-[80vh] bg-no-repeat bg-center bg-cover flex flex-col justify-center items-center">
+        <img src="./images/Ellipse-1.png" alt="">
+        <h5 class="text-white text-2xl garamond mt-6 mb-2 font-extrabold">Awlad Hossain</h5>
+        <p class="text-white font-normal poppins mb-8">UIX Designer</p>
+        <p class="text-white font-normal poppins w-2/3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old..</p>
+      </div>
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide2" class="btn btn-circle">❮</a> 
+        <a href="#slide4" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+    <div id="slide4" class="carousel-item relative w-full">
+      <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/slider-3.jpg)] h-[80vh] bg-no-repeat bg-center bg-cover flex flex-col justify-center items-center">
+        <img src="./images/Ellipse-1.png" alt="">
+        <h5 class="text-white text-2xl garamond mt-6 mb-2 font-extrabold">Awlad Hossain</h5>
+        <p class="text-white font-normal poppins mb-8">UIX Designer</p>
+        <p class="text-white font-normal poppins w-2/3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old..</p>
+      </div>
+      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide3" class="btn btn-circle">❮</a> 
+        <a href="#slide1" class="btn btn-circle">❯</a>
+      </div>
+    </div>
+  </div>
+
+
+
+</div>
+
+
+
+
+
+
+
+</section>
+
 </main>
 
 
