--- a/legal.html
+++ b/legal.html
@@ -185,8 +185,6 @@
 <!-- Slider sub section  -->
 <div>
 
-
-
   <div class="carousel w-full">
     <div id="slide1" class="carousel-item relative w-full">
       <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex flex-col justify-center items-center">
@@ -242,7 +240,73 @@
 
 </div>
 
+<!-- FAQ Section  -->
+<section class="my-24">
 
+  <div class="text-center  mx-auto ">
+    <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">Frequently Asked Any Questions</h3>
+    <p class="font-normal poppins text-[#707070] mt-6 mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    
+    <!-- FAQ Sub Container  -->
+    <div class="flex flex-col lg:flex-row items-center gap-8">
+
+      <!-- Main Sub sub FAQ  -->
+      <div class="flex-1 space-y-4 px-5">
+
+        <!-- first question  -->
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-extrabold garamond">
+            Are application fee waivers available?
+          </div>
+          <div class="collapse-content poppins font-normal"> 
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+          </div>
+        </div>
+        
+        <!-- second question  -->
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-extrabold garamond">
+            Are application fee waivers available?
+          </div>
+          <div class="collapse-content poppins font-normal"> 
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+          </div>
+        </div>
+
+        <!-- Third question  -->
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-extrabold garamond">
+            Are application fee waivers available?
+          </div>
+          <div class="collapse-content poppins font-normal"> 
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+          </div>
+        </div>
+
+        <!-- Fourth question  -->
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-extrabold garamond">
+            Are application fee waivers available?
+          </div>
+          <div class="collapse-content poppins font-normal"> 
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+          </div>
+        </div>
+
+
+      </div>
+
+      <!-- img sub sub section  -->
+      <div class="flex-1 px-5">
+<img src="./images/faq.png" alt="">
+      </div>
+    </div>
+
+</section>
 
 
 
