contact section done

--- a/legal.html
+++ b/legal.html
@@ -88,7 +88,7 @@
 
 <main class="container mx-auto">
 <!-- Banner Section  -->
-<section class="my-24">
+<section class="mb-24 mt-5 lg:mt-8">
 <div class="flex justify-center">
   <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex justify-center items-center">
 <div class="text-white space-y-4 ">
@@ -179,7 +179,7 @@
 <section class="my-24">
   <div class="text-center  mx-auto ">
     <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">What Our Client Say</h3>
-    <p class="font-normal poppins text-[#707070] mt-6 mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    <p class="font-normal poppins text-[#707070] mt-6 mb-8 lg:mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   </div>
 
 <!-- Slider sub section  -->
@@ -239,13 +239,14 @@
 
 
 </div>
+</section>
 
 <!-- FAQ Section  -->
 <section class="my-24">
 
   <div class="text-center  mx-auto ">
     <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">Frequently Asked Any Questions</h3>
-    <p class="font-normal poppins text-[#707070] mt-6 mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    <p class="font-normal poppins text-[#707070] mt-6 mb-8 lg:mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
     
     <!-- FAQ Sub Container  -->
     <div class="flex flex-col lg:flex-row items-center gap-8">
@@ -308,11 +309,64 @@
 
 </section>
 
+<!-- Contact section  -->
+
+<section>
+<div class="text-center  mx-auto ">
+  <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">Frequently Asked Any Questions</h3>
+    <p class="font-normal poppins text-[#707070] mt-6 mb-8 lg:mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
 
+    <!-- Contact container  -->
+    <div class="flex flex-col lg:flex-row gap-4 lg:gap-8">
+<!-- icon grid contact  -->
+      <div class="grid grid-cols-1 lg:grid-cols-2 flex-1 p-4 lg:p-0 gap-2 lg:gap-0">
 
+<div class="bg-[#F3F3F3] p-2 space-y-4 flex flex-col justify-center items-center border-r border-b">
+  <img src="./images/location.png" alt="">
+  <h5 class="garamond text-2xl font-extrabold">Address</h5>
+  <p class="font-normal poppins">A108 Adam Street,
+    New York, NY 535022</p>
+</div>
+<div class="bg-[#F3F3F3] p-2 space-y-4 flex flex-col justify-center items-center border-b">
+  <img src="./images/call.png" alt="">
+  <h5 class="garamond text-2xl font-extrabold">Call Us</h5>
+  <p class="font-normal poppins">+88 01750 00 00 00 <br>
+    +88 01750 00 00 00</p>
+</div>
+<div class="bg-[#F3F3F3] p-2 space-y-2 flex flex-col justify-center items-center border-r">
+  <img src="./images/email.png" alt="">
+  <h5 class="garamond text-2xl font-extrabold">Email Us</h5>
+  <p class="font-normal poppins">info@gmail.com <br>
+    info@gmail.com</p>
+</div>
+<div class="bg-[#F3F3F3] p-2 space-y-2 flex flex-col justify-center items-center border-r">
+  <img src="./images/time.png" alt="">
+  <h5 class="garamond text-2xl font-extrabold">Working Hours</h5>
+  <p class="font-normal poppins">Mon-Fri: 9AM to 5PM <br>
+    Sunday: 9AM to 1 PM</p>
+</div>
+</div>
 
+<!-- form sub section  -->
+      <div class="flex-1 p-4 lg:p-0">
+<form class="flex flex-col space-y-4" action="">
+<input class="bg-[#F3F3F3] p-3 text-[#707070] poppins font-normal rounded-lg"  type="text" placeholder="Your Name" name="" id="">
+<input class="bg-[#F3F3F3] p-3 text-[#707070] poppins font-normal rounded-lg" type="email" placeholder="Your Email" name="" id="">
+<input class="bg-[#F3F3F3] p-3 text-[#707070] poppins font-normal rounded-lg" type="text" placeholder="Subject" name="" id="">
+<textarea class="bg-[#F3F3F3] h-20 p-3 text-[#707070] poppins font-normal rounded-lg" placeholder="Your Message" name="" id="" cols="30" rows="10"></textarea>
+<Button class="btn bg-[#B68C5A;] text-white rounded-lg border-none">Send Message</Button>
+</form>
+      </div>
+
+    </div>
+
+</div>
 </section>
+
+
+
+
 
 </main>
 
