--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <h1 class="text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
   <p class="text-center font-normal lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   <div class="flex justify-center items-center space-x-4">
-    <input class="input lg:w-1/3 poppins" type="text" placeholder="Search your services">
+    <input class="input lg:w-1/3 poppins text-black" type="text" placeholder="Search your services">
     <button class="btn border-none lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
   </div>
@@ -311,7 +311,7 @@
 
 <!-- Contact section  -->
 
-<section>
+<section class="mb-24">
 <div class="text-center  mx-auto ">
   <h3 class="garamond text-xl lg:text-2xl font-extrabold text-[#414040]">Frequently Asked Any Questions</h3>
     <p class="font-normal poppins text-[#707070] mt-6 mb-8 lg:mb-16 px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
@@ -371,7 +371,52 @@
 </main>
 
 
-<footer>
+<footer class="bg-black">
+  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-4 text-center gap-2 text-white py-10">
+
+
+<div class="space-y-8">
+  <div class="flex justify-center items-center ">
+    <img class="w-8 lg:w-12" src="./images/logo3.png" alt="">
+  <p class="text-xl text-xs lg:text-2xl ml-2 font-bold garamond">Justice</p>
+  </div>
+  <p class="font-normal text-xs poppins text-center text-[#CFCFCF]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+</div>
+
+
+<div>
+<h5 class="font-extrabold text-xl garamond mb-12">Usefull Link</h4>
+<p class="font-normal text-xs poppins text-[#CFCFCF]">Homes <br>
+  About Us <br>
+  Cases <br>
+  Blog <br>
+  Contact Us</p>
+</div>
+
+
+<div>
+  <h5 class="font-extrabold text-xl garamond mb-12">Contact Now</h4>
+  <p class="font-normal poppins text-xs text-[#CFCFCF]">555 4th 5t NW, Washington <br>
+    DC 20530, United States</p>
+    <br>
+  <p class="font-normal poppins text-xs text-[#CFCFCF]">+88 01750 000 000 <br>
+    +88 01750 000 000</p>
+    <br>
+    <p class="font-normal text-xs poppins text-[#CFCFCF]">info@gmail.com <br>
+      info@gmail.com</p>
+</div>
+
+<div>
+  <h5 class="font-extrabold text-xl garamond mb-12">Subscribe</h4>
+  <p class="font-normal text-xs text-[#CFCFCF] poppins mb-6">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+<div class="flex bg-white rounded-l">
+  <input class="border-none rounded-l bg-none" placeholder="Email Address" type="email" name="" id="">
+  <button class="bg-[#B68C5A] w-[100px]"><img src="./images/mouse.png" alt=""></button>
+</div>
+</div>
+
+
+  </div>
 
 </footer>
 
