--- a/legal.html
+++ b/legal.html
@@ -90,13 +90,13 @@
 <!-- Banner Section  -->
 <section class="mb-24 mt-5 lg:mt-8 p-4">
 
-  <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] w-full bg-no-repeat bg-center bg-cover flex justify-center items-center">
+  <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] bg-no-repeat bg-center bg-cover flex justify-center items-center">
 <div class="text-white space-y-4 ">
   <h1 class=" text-3xl lg:text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
   <p class="text-center font-normal px-5 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   <div class="flex justify-center items-center px-4 space-x-4">
-    <input class="input w-2/3 poppins text-black" type="text" placeholder="Search your services">
-    <button class="btn border-none lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
+    <input class="input  poppins text-black" type="text" placeholder="Search your services">
+    <button class="btn border-none  poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
   </div>
   </div>
