used a container in banner

--- a/legal.html
+++ b/legal.html
@@ -90,7 +90,7 @@
 <!-- Banner Section  -->
 <section class="mb-24 mt-5 lg:mt-8 ">
 
-  <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] border-red-700 bg-no-repeat bg-center bg-cover flex justify-center items-center">
+  <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] border-red-700 bg-no-repeat bg-center bg-cover flex justify-center items-center container mx-auto">
 <div class="text-white space-y-4 ">
   <h1 class=" text-2xl lg:text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
   <p class="text-center font-normal px-5 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
