last try to fix it

--- a/legal.html
+++ b/legal.html
@@ -93,10 +93,11 @@
   <div class="bg-[linear-gradient(180deg,rgba(17,17,17,0.0),rgba(17,17,17,1.0)),url(./images/banner.png)] h-[80vh] border-red-700 bg-no-repeat bg-center bg-cover flex justify-center items-center container mx-auto">
 <div class="text-white space-y-4 ">
   <h1 class=" text-2xl lg:text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
-  <p class="text-center font-normal px-5 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-  <div class="flex justify-center items-center px-4 space-x-1 lg:space-x-4">
-    <input class="input  poppins text-black" type="text" placeholder="Search your services">
-    <button class="btn border-none  poppins bg-[#B68C5A] text-white">Search</button>
+  <!-- <p class="text-center font-normal px-5 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p> -->
+  <p class="font-normal poppins text-[#707070] px-4 lg:px-10 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  <div class="flex justify-center items-center  space-x-1 lg:space-x-4">
+    <input class=" p-2 rounded-lg poppins text-black" type="text" placeholder="Search your services">
+    <button class=" p-2 rounded-lg border-none  poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
   </div>
   </div>
