--- a/legal.html
+++ b/legal.html
@@ -78,7 +78,7 @@
         </ul>
       </div>
       <div class="navbar-end">
-        <a class="btn bg-[#B68C5A;] font-semibold poppins text-white rounded-lg">Free Consultation</a>
+        <a class="btn bg-[#B68C5A;] w-5/6 lg:w-auto font-semibold poppins text-white rounded-lg">Free Consultation</a>
       </div>
     </div>
   </nav>
