--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </svg>
             </div>
             <ul tabindex="0"
-              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-poppins font-medium">
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-poppins font-medium items-center">
               <li><a>Home</a></li>
               <li><a>Services <i class="fa-solid fa-angle-right "></i></a></li>
               <li><a>Cases <i class="fa-solid fa-angle-right "></i></a></li>
@@ -73,7 +73,7 @@
 
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1 poppins font-medium">
+          <ul class="menu menu-horizontal px-1 poppins font-medium items-center">
             <li><a>Home</a></li>
             <li><a>Services <i class="fa-solid fa-angle-right "></i></a></li>
             <li><a>Cases <i class="fa-solid fa-angle-right "></i></a></li>
@@ -99,8 +99,8 @@
   <h1 class="text-3xl lg:text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
   <p class="text-center font-normal px-6 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   <div class="flex flex-col lg:flex-row justify-center items-center space-x-4">
-    <input class="input lg:w-1/3 poppins mb-4 text-black" type="text" placeholder="Search your services">
-    <button class="btn border-none lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
+    <input class="input w-2/3 text-center lg:w-1/3 poppins mb-4 text-black" type="text" placeholder="Search your services">
+    <button class="btn border-none text-center w-1/3 lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
   </div>
   </div>
