--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
 <!-- Card Container section  -->
 <section>
-  <div class="text-center w-1/2 mx-auto space-y-3">
+  <div class="text-center mx-auto space-y-3">
     <h3 class="garamond text-2xl font-extrabold text-[#414040]">The Legal Practice Area</h3>
-    <p class="font-normal poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    <p class="font-normal p-4 poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
   </div>
 <!-- Card sub section  -->
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-10">
@@ -381,10 +381,10 @@
 
 <div class="space-y-8">
   <div class="flex justify-center items-center ">
-    <img class="w-8 lg:w-12" src="./images/logo3.png" alt="">
-  <p class="text-xl text-xs lg:text-2xl ml-2 font-bold garamond">Justice</p>
+    <img class=" w-12" src="./images/logo3.png" alt="">
+  <p class="text-xl text-xl lg:text-2xl ml-2 font-bold garamond">Justice</p>
   </div>
-  <p class="font-normal text-xs poppins text-center text-[#CFCFCF]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+  <p class="font-normal text-xs p-4 poppins text-center text-[#CFCFCF]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 </div>
 
 
@@ -410,12 +410,12 @@
       info@gmail.com</p>
 </div>
 
-<div>
+<div class="">
   <h5 class="font-extrabold text-xl garamond mb-12">Subscribe</h4>
-  <p class="font-normal text-xs text-[#CFCFCF] poppins mb-6">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
-<div class="flex bg-white rounded-l">
+  <p class="font-normal text-xs p-4 text-[#CFCFCF] poppins mb-6">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+<div class="flex w-2/3 lg:w-auto justify-center mx-auto items-center bg-white rounded-l">
   <input class="border-none rounded-l bg-none" placeholder="Email Address" type="email" name="" id="">
-  <button class="bg-[#B68C5A] w-[100px]"><img src="./images/mouse.png" alt=""></button>
+  <button class="bg-[#B68C5A] text-red-500 w-[100px]"><img src="./images/mouse.png" alt=""></button>
 </div>
 </div>
 
