--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 <div class="text-white space-y-4 ">
   <h1 class="text-3xl lg:text-4xl font-extrabold garamond text-center">We Provide Effective <br> Legal Solutions</h1>
   <p class="text-center font-normal px-6 lg:px-28 poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-  <div class="flex flex-col lg:flex-row justify-center items-center space-x-4">
-    <input class="input w-2/3 text-center lg:w-1/3 poppins mb-4 text-black" type="text" placeholder="Search your services">
+  <div class="flex flex-col lg:flex-row justify-center  space-x-4">
+    <input class="input w-2/3 lg:w-1/3 poppins mb-4 text-black" type="text" placeholder="Search your services">
     <button class="btn border-none text-center w-1/3 lg:w-1/4 poppins bg-[#B68C5A] text-white">Search</button>
 </div>    
   </div>
@@ -376,10 +376,10 @@
 
 
 <footer class="bg-black">
-  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-4 text-center gap-2 text-white py-10">
+  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-4 text-center  gap-2 text-white py-10">
 
 
-<div class="space-y-8">
+<div class="space-y-8 flex flex-col">
   <div class="flex justify-center items-center ">
     <img class=" w-12" src="./images/logo3.png" alt="">
   <p class="text-xl text-xl lg:text-2xl ml-2 font-bold garamond">Justice</p>
@@ -388,13 +388,15 @@
 </div>
 
 
-<div>
+<div class="flex flex-col">
 <h5 class="font-extrabold text-xl garamond mb-12">Usefull Link</h4>
-<p class="font-normal text-xs poppins text-[#CFCFCF]">Homes <br>
-  About Us <br>
-  Cases <br>
-  Blog <br>
-  Contact Us</p>
+
+  <p class="font-normal text-xs poppins text-[#CFCFCF]">Homes <br>
+    About Us <br>
+    Cases <br>
+    Blog <br>
+    Contact Us</p>
+
 </div>
 
 
